--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'mysql:mysql-connector-java:8.0.33'
 }
+
 
 tasks.named('test') {
 	useJUnitPlatform()
