--- a/build.gradle
+++ b/build.gradle
@@ -22,9 +22,12 @@ dependencies {
 	implementation 'mysql:mysql-connector-java:8.0.33'
 	annotationProcessor 'org.projectlombok:lombok'
 	compileOnly 'org.projectlombok:lombok'
-
+	implementation 'javax.validation:validation-api:2.0.1.Final' // 사용하는 Bean Validation API 버전에 맞게 설정
 }
 
+compileJava {
+	options.compilerArgs += ["-parameters"]
+}
 
 tasks.named('test') {
 	useJUnitPlatform()
